public interface Lorem {
    public String getLorem();
}
