public abstract class LoremFactory {
    public abstract Lorem createLorem(String source);
}
